# run_codex

./: .env.example  .gitignore  AGENTS.md  README.md  SYSTEM_PROMPT.md  pyproject.toml
config/: agent.config.toml
docker/: Dockerfile  docker-entrypoint.py
docker/agent_cli/: Dockerfile  Dockerfile.base  README.md  docker-entrypoint.py  hub_artifact
docker/agent_hub/: Dockerfile  README.md
docker/development/: Dockerfile  README.md  verify-demo-tooling.sh
docs/: agent-gotchas.md  agent-mcp.md  agent-setup.md  mobile_capacitor.md  repo-map.md
src/agent_cli/: cli.py  providers.py
src/agent_hub/: agent_tools_mcp.py  server.py
tests/: test_agent_tools_ack.py  test_hub_and_cli.py  test_hub_ui_widgets.py  test_install_script.py  test_integration_suite_selector.py  test_run_integration.py  test_web_create_project_config_mode.py  test_web_flexlayout_state.py  test_web_pending_state.py  test_web_stable_list_order.py
tests/integration/: conftest.py  helpers.py  test_agent_cli_runtime_ack.py  test_agent_cli_snapshot_repro_real.py  test_agent_matrix.py  test_agent_tools_ack_routes.py  test_auto_config_lifecycle.py  test_chat_lifecycle_ready.py  test_entrypoint_auto_ack.py  test_hub_api_real_process.py  test_hub_chat_lifecycle_api.py  test_provider_local_api_real_process.py  test_provider_local_e2e.py  test_snapshot_builds.py
tools/demo/: run_demo.mjs
tools/mobile/: deploy_phone.sh
tools/testing/: preflight_integration_env.py  run_integration.py  select_integration_suites.py
web/: index.html
web/src/: App.jsx  autoConfigProjects.js  autoConfigProjects.test.js  (+15 more)
(+8 files in other folders)
