[project]
name = "agent_hub"
version = "0.1.0"
description = "CLI utilities for launching containerized agent environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "openai>=1.0",
  "uvicorn>=0.29",
  "websockets>=12.0",
]

[project.scripts]
agent_cli = "agent_cli.cli:main"
agent_hub = "agent_hub.server:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cli", "src/agent_hub"]
include = ["src/agent_hub/prompts/*.md"]
